--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="dropdown-item" href="/index.html#carouselExampleIndicators">IMAGENES</a>
                         <a class="dropdown-item" href="/index.html#somos">BIOGRAFÍA</a>
                         <a class="dropdown-item" href="/index.html#banda">INTEGRANTES</a>
-                </li>
+                    </div>
                 <li class="nav-item">
                     <a class="nav-link" href="/shows.html">SHOWS</a>
                 </li>
@@ -152,7 +152,7 @@
     </div>    
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
 </script>
 </body>
 </html>
