--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--Bootstrap-->
         <link href="/css/bootstrap.min.css" rel="stylesheet">
         <!--Mi propio estilo-->
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/scss/estilo.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;400&display=swap" rel="stylesheet">
